Block: fix issues with incorrectly visible borders, they should be hidden because they belong to nested blocks/tables, see #66827

--- a/src/scss/themes/fylr/mixins/_block.scss
+++ b/src/scss/themes/fylr/mixins/_block.scss
@@ -120,12 +120,12 @@
 // - block-inline is used within base-config to lay out the block vertically in the 'inline' direction
 // - use when there is enough vertical space
 
+// .cui-block
+
 @mixin block-inline($content-indent: 200px, $content-max-width: 850px) {
 	--block-inline-content-indent: #{$content-indent};
 	--block-inline-content-max-width: #{$content-max-width};
 	--block-indent: 0;
-	
-	@include block-separator();
 
 	@include media-breakpoint-up(lg) {
 		&:not(.cui-form-block--has-checkbox) {
@@ -143,6 +143,10 @@
 	// nested
 	.cui-block {
 		--block-inline-content-indent: 0;
+	}
+
+	.cui-form-table {
+		@include block-separator-reset();
 	}
 
 	.cui-form {
